Bug 1209779 - Ensure that all null elements are written when streaming profiler JSON; r=shu, a=lizzard